# pdoc

./: .envrc  cabal.project  pdoc.nix
pdoc/: CHANGELOG.md  pdoc.cabal  shell.nix
pdoc-list/: CHANGELOG.md  pdoc-list.cabal
pdoc-list/src/: Main.hs
pdoc/exe/: Main.hs  Store.hs
