cabal-version:      3.0
name:               pdoc-list
version:            0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alp Mestanogullari
maintainer:         alpmestan@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable pdoc-list
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, pandoc-types, pandoc, directory, filepath, filepattern, split, text
    hs-source-dirs:   src
    default-language: Haskell2010
