cabal-version:      3.0
name:               pdoc
version:            0.1
synopsis:           Static site gen with pandoc
-- description:
homepage:           https://github.com/alpmestan/pdoc
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alp Mestanogullari
maintainer:         alpmestan@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable pdoc
    import:           warnings
    main-is:          Main.hs
    other-modules:    Store
    build-depends:    base, directory, filepath, filepattern, optparse-applicative, process, containers, time, pandoc, text
    hs-source-dirs:   exe
    default-language: GHC2021
